/*
 * This file was generated by the Gradle 'init' task.
 */

plugins {
 //   id 'org.onvif.java-conventions'
 //   id 'java-test-fixtures'
    id 'java'
    id 'java-library'
    id("com.github.erdi.webdriver-binaries") version "3.2"
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

repositories {
    mavenCentral()
    maven {
        url = uri("https://build.shibboleth.net/maven/releases/")  // For implementation group: 'org.opensaml', name: 'opensaml-xacml-impl', version: '4.3.0'
        //  url = uri("https://company/com/maven2")
    }

  //  uri = uri("https://build.shibboleth.net/maven/releases/org/opensaml/")
}

tasks.register('xxx', Exec) {
    def f = files('../onvif-ws-client/build/libs/onvif-ws-client.jar')
    def y = f
}

clean.dependsOn(":onvif-ws-client:clean")
compileJava.dependsOn(":onvif-ws-client:build")

dependencies {
    implementation "org.apache.cxf:cxf-rt-frontend-jaxws:${project.property('cxfVersion')}"
    implementation group: "org.apache.cxf.services.wsn", name: "cxf-services-wsn-core", version: project.property('cxfVersion')
    compileOnly "org.apache.cxf:cxf-rt-ws-security:${project.property('cxfVersion')}"
    implementation "org.apache.cxf:cxf-rt-transports-http:${project.property('cxfVersion')}"
    implementation "org.apache.cxf:cxf-rt-transports-http-jetty:${project.property('cxfVersion')}"

    // Required for cxf version > 4.0.1
    compileOnly 'org.checkerframework:checker-qual:3.48.2'
    compileOnly 'com.google.errorprone:error_prone_annotations:2.36.0'
    compileOnly 'com.google.j2objc:j2objc-annotations:3.0.0'
    testCompileOnly 'org.checkerframework:checker-qual:3.48.2'
    testCompileOnly 'com.google.errorprone:error_prone_annotations:2.36.0'
    testCompileOnly 'com.google.j2objc:j2objc-annotations:3.0.0'

    implementation 'org.apache.activemq:activemq-broker:6.1.4'

    implementation project(':onvif-ws-client')


    implementation 'commons-io:commons-io:2.18.0'
    implementation 'commons-codec:commons-codec:1.10'
    implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.17.0'
//    compileOnly    'jakarta.xml.bind:jakarta.xml.bind-api:4.0.2'
    implementation 'jakarta.jws:jakarta.jws-api:3.0.0'
    implementation 'jakarta.xml.soap:jakarta.xml.soap-api:3.0.2'

    implementation 'org.glassfish.hk2:osgi-resource-locator:2.4.0'
    testImplementation group: 'org.slf4j', name: 'slf4j-simple', version: '1.7.26'
    testImplementation group: 'ch.qos.logback', name: 'logback-classic', version: '1.5.12'
}


description = 'onvif-java'
